--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,73 @@
+acme==2.2.0
+Babel==2.9.1
 bcrypt==4.0.1
 cachelib==0.10.2
+certbot==2.2.0
+cffi==1.14.5
+chardet==4.0.0
 click==8.1.3
+cloud-init==22.1
+ConfigArgParse==1.5.3
+configobj==5.0.6
+cryptography==36.0.1
+dbus-python==1.2.18
+decorator==4.4.2
+distro==1.5.0
+ethtool==0.15
 Flask==2.2.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
 Flask-Session==0.4.0
 Flask-SQLAlchemy==3.0.3
+gpg==1.15.1
 greenlet==2.0.2
 gunicorn==20.1.0
+idna==2.10
 importlib-metadata==6.0.0
+iniparse==0.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+josepy==1.13.0
+jsonpatch==1.21
+jsonpointer==2.0
+libcomps==0.1.18
 MarkupSafe==2.1.2
+netifaces==0.10.6
+nftables==0.1
+oauthlib==3.1.1
+packaging==23.0
+parsedatetime==2.6
+perf==0.1
+pexpect==4.8.0
+pip-review==1.3.0
+ply==3.11
+prettytable==0.7.2
+ptyprocess==0.6.0
+pycparser==2.20
+PyGObject==3.40.1
+pyinotify==0.9.6
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyserial==3.4
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-linux-procfs==0.7.0
+pytz==2021.1
+pyudev==0.22.0
+PyYAML==5.4.1
+requests==2.25.1
+rpm==4.16.1.3
+selinux==3.5
+sepolicy==3.5
+setools==4.4.1
+six==1.15.0
+sos==4.3
 SQLAlchemy==2.0.3
-typing-extensions==4.5.0
+subscription-manager==1.29.33
+systemd-python==234
+typing_extensions==4.5.0
+urllib3==1.26.5
+uWSGI==2.0.21
 Werkzeug==2.2.3
 zipp==3.13.0
